<resources>
    <string name="app_name">Franziskaneum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="news">Aktuelles</string>
    <string name="vplan">Vertretungsplan</string>
    <string name="timetable">Stundenplan</string>
    <string name="teacher_list">Lehrerliste</string>
    <string name="give_feedback">Feedback geben</string>
    <string name="settings">Einstellungen</string>
    <string name="vplans">Vertretungspläne</string>
    <string name="password">Passwort</string>
    <string name="message_enter_password">Dieser Inhalt ist passwortgeschützt. Um ihn anzuschauen, gib bitte dein Passwort ein</string>
    <string name="no_connection">Keine Verbindung</string>
    <string name="unknown_error">Unbekannter Fehler</string>
    <string name="recycler_item_position" type="id" />
    <string name="picasso_target" type="id" />
    <string name="news_image_description" type="id" />
    <string name="subject">Fach</string>
    <string name="room">Raum</string>
    <string name="teacher">Lehrer</string>
    <string name="school_class_course">Klasse/Kurs</string>
    <string name="double_hour">Doppelstunde</string>
    <string name="pay_attention_to_exact_spelling">Achtung: Bitte auf exakte Schreibweise achten z.B. \&quot;EN1\&quot;</string>
    <string name="hour">Stunde</string>
    <string name="save">Speichern</string>
    <string name="general">Allgemein</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="help">Hilfe</string>
    <string name="about">Über</string>
    <string name="check_for_updates">Auf Updates prüfen</string>
    <string name="app_update">App Update</string>
    <string name="contact_developer">Entwickler kontaktieren</string>
    <string name="teacher_mode">Lehrermodus</string>
    <string name="teacher_mode_disabled">Lehrermodus deaktiviert</string>
    <string name="teacher_mode_enabled">Lehrermodus aktiviert</string>
    <string name="a_b_week">A/B Woche</string>
    <string name="a_b_week_disabled">Dein Stundenplan beinhaltet eine Woche</string>
    <string name="a_b_week_enabled">Dein Stundenplan beinhaltet zwei verschiedene Wochen</string>
    <string name="home_category">Startkategorie</string>
    <string name="vibration">Vibration</string>
    <string name="light">Licht</string>
    <string name="feedback_franziskaneum_app">Feedback Franziskaneum App</string>
    <string name="shortcut">Kürzel</string>
    <string name="changelog">Changelog</string>
    <string name="developed_by_niko_kirste">Entwickelt von Niko Kirste</string>
    <string name="version">Version: %1$s</string>
    <string name="loading">Laden</string>
    <string name="a_new_app_update_is_available">Ein neues App Update ist verfügbar</string>
    <string name="download">Herunterladen</string>
    <string name="the_newest_version_is_already_installed">Die neueste Version ist bereits installiert</string>
    <string name="sd_card_required">SD Karte wird benötigt</string>
    <string name="new_app_update_available">Neues App Update verfügbar</string>
    <string name="absent_teacher">Abwesende Lehrer</string>
    <string name="absent_school_classes">Abwesende Klassen</string>
    <string name="teacher_with_changes">Lehrer mit Änderung</string>
    <string name="classes_with_changes">Klassen mit Änderung</string>
    <string name="changes_supervision">Geänderte Aufsichten</string>
    <string name="additional_info">Zusätzliche Informationen</string>
    <string name="changed_lessons">Geänderte Unterrichtsstunden</string>
    <string name="info">Info</string>
    <string name="name">Name</string>
    <string name="subjects">Fächer</string>
    <string name="specific_tasks">Besondere Aufgaben</string>
    <string name="older_posts">Ältere Posts</string>
    <string name="transition_news_image">de.franziskaneum.news:image</string>
    <string name="transition_toolbar">de.franziskaneum:toolbar</string>
    <string name="news_url">http://www.franziskaneum.de/wordpress/category/aktuelles/</string>
    <string name="vplan_url">http://www.franziskaneum.de/wordpress/schule/planung/vertretungsplan/</string>
    <string name="teacher_url">http://www.franziskaneum.de/wordpress/wer-wir-sind/lehrerliste/</string>
    <string name="welcome">Willkommen</string>
    <string name="enter_school_class">Klasse angeben</string>
    <string name="enter_shortcut">Kürzel eintragen</string>
    <string name="vplan_update_times">Vertretungsplan Aktualisierungen</string>
    <string name="add">Hinzufügen</string>
    <string name="changes">%1$d Änderungen</string>
    <string name="changes_at_days">%1$d Änderungen an %2$d Tagen</string>
    <string name="hour_subject_teacher_or_school_class_room_info">%1$s. St. %2$s %3$s %4$s %5$s</string>
    <string name="update_times">Aktualisierungszeiten</string>
    <string name="not_available_rooms">Nicht verfügbare Räume</string>
    <string name="my_changes">Meine Änderungen</string>
    <string name="no_changes">Keine Änderungen</string>
    <string name="email">E-Mail</string>
    <string name="image_could_not_be_loaded">Bild konnte nicht geladen werden</string>
    <string name="send_bugreport">Fehlerbericht senden</string>
    <string name="send">Senden</string>
    <string name="activity_log_is_not_created">Aktivitätenprotokoll wird nicht erstellt</string>
    <string name="activity_log_is_created_in_the_background">Aktivitätenprotokoll wird im Hintergrund erstellt</string>
    <string name="create_activity_log">Aktivitätenprotokoll erstellen</string>
    <string name="bugreport_franziskaneum_app">Fehlerbericht Franziskaneum App</string>
    <string name="wrong_password">Falsches Passwort</string>
    <string name="delete_all">Alles löschen</string>
    <string name="copy_week">Woche kopieren</string>
    <string name="are_you_sure_you_want_to_delete_your_whole_timetable">Bist du sicher, dass du deinen kompletten Stundenplan löschen möchtest?</string>
    <string name="a_week">A Woche</string>
    <string name="b_week">B Woche</string>
    <string name="delete_week">Woche löschen</string>
    <string name="all_subjects_of_the_target_week_will_be_overwritten">Achtung, beim kopieren werden alle Unterrichtsstunden der Ziel-Woche überschrieben</string>
    <string name="are_you_sure_you_want_to_delete_the_current_week">Bist du sicher, dass du die aktuelle Woche löschen möchtest?</string>
    <string name="vplan_notifications">Vertretungsplan Benachrichtigungen</string>
    <string name="you_receive_notifications_in_case_of_changes_to_the_vplan">Du erhältst Benachrichtigungen bei Änderungen am Vertretungsplan</string>
    <string name="you_dont_receive_notifications_in_case_of_changes_to_the_vplan">Du erhältst keine Benachrichtigungen bei Änderungen am Vertretungsplan</string>
    <string name="_freehour_">[ Freistunde ]</string>
    <string name="show_times">Zeiten anzeigen</string>
    <string name="changed_school_class">Klasse geändert</string>
    <string name="your_school_class_was_automatically_changed_to">Deine Klasse wurde automatisch zu &lt;b>%1$d/%2$d&lt;/b> geändert</string>
    <string name="change">ändern</string>
    <string name="exams">Klausuren</string>
    <string name="exam_school_class">Jahrgang</string>
    <string name="course">Kurs</string>
    <string name="course_leader">Kursleiter</string>
    <string name="start_time">Beginn</string>
    <string name="duration">Dauer</string>
    <string name="licenses">Lizenzen</string>
</resources>
