<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingStart="24dp"
    android:paddingTop="24dp">

    <TextView
        android:id="@android:id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/enter_school_class"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/dialog_welcome_school_class_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <Spinner
            android:id="@+id/dialog_welcome_school_class_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/dialog_welcome_school_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_welcome_teacher_shortcut_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <EditText
            android:id="@+id/dialog_welcome_teacher_shortcut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shortcut"
            android:inputType="textCapWords"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/dialog_welcome_teacher_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/teacher_mode"
        android:textOff="@string/teacher_mode_disabled"
        android:textOn="@string/teacher_mode_enabled"
        android:textSize="16sp" />

</LinearLayout>